samples/_failures_safe/1761423937_1552b2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1bdc5bbf.c: In function ‘main’:
./samples/SAFE/__tmp_1bdc5bbf.c:135:13: error: expected expression at end of input
  135 |             rows1 =
      |             ^~~~~
./samples/SAFE/__tmp_1bdc5bbf.c:135:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1bdc5bbf.c:135:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1bdc5bbf.c:135:13: error: expected declaration or statement at end of input
